[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/consolab.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/scripts/UI/Pause Screen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 39
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Pause Screen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.7 )

[node name="main" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="main"]
margin_left = 393.0
margin_top = 183.0
margin_right = 630.0
margin_bottom = 417.0

[node name="DEDGE N CIDE" type="Label" parent="main/VBoxContainer"]
margin_right = 237.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
text = "DODGE
N
DICE"
align = 1

[node name="CONTINUE" type="Button" parent="main/VBoxContainer"]
margin_top = 130.0
margin_right = 237.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 2 )
text = "CONTINUE"

[node name="H2P" type="Button" parent="main/VBoxContainer"]
margin_top = 157.0
margin_right = 237.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 2 )
text = "HOW2PLAY"

[node name="WHO DID THIS\?\?\?" type="Button" parent="main/VBoxContainer"]
margin_top = 184.0
margin_right = 237.0
margin_bottom = 207.0
custom_fonts/font = SubResource( 2 )
text = "CREDITS"

[node name="GOOD bye" type="Button" parent="main/VBoxContainer"]
margin_top = 211.0
margin_right = 237.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 2 )
text = "LEAVE THIS FORSAKEN REALM"

[node name="h2p" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="h2p"]
margin_left = 292.0
margin_top = 132.0
margin_right = 732.0
margin_bottom = 467.0
custom_constants/separation = 20

[node name="DEDGE N CIDE" type="Label" parent="h2p/VBoxContainer"]
margin_right = 440.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
text = "HOW
2
PLAY"
align = 1

[node name="DEDGE N CIDE2" type="Label" parent="h2p/VBoxContainer"]
margin_top = 146.0
margin_right = 440.0
margin_bottom = 335.0
custom_fonts/font = SubResource( 3 )
text = "Use left stick/WASD to move
Use right stick/mouse to aim
Use L2/Right Click to enable Aiming Line
Use R2/Left Click to Fire

dice do funky dice thing when rolled

dice"
align = 1

[node name="credits" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="credits"]
margin_left = 341.0
margin_top = 223.0
margin_right = 682.0
margin_bottom = 376.0
custom_constants/separation = 20

[node name="DEDGE N CIDE" type="Label" parent="credits/VBoxContainer"]
margin_right = 341.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "CREDITS"
align = 1

[node name="DEDGE N CIDE2" type="Label" parent="credits/VBoxContainer"]
margin_top = 60.0
margin_right = 341.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 3 )
text = "Dodge N Dice by Teamname:FIOLTR
Programming: Mequam & X3K
Art: SueCutzy & X3K
Music: spoon"
align = 1

[connection signal="pressed" from="main/VBoxContainer/CONTINUE" to="." method="_on_CONTINUE_pressed"]
[connection signal="pressed" from="main/VBoxContainer/H2P" to="." method="_on_H2P_pressed"]
[connection signal="pressed" from="main/VBoxContainer/WHO DID THIS???" to="." method="_on_WHO_DID_THIS_pressed"]
[connection signal="pressed" from="main/VBoxContainer/GOOD bye" to="." method="_on_GOOD_bye_pressed"]
